Started working on the file cache logic

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,12 @@
 [metadata]
 name = mkdocs-crosslink-plugin
-version = 0.4.0
+version = 0.0.1
 author = six-two
 author_email = pip@six-two.dev
 description = Simplify linking between different MkDocs pages
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/six-two/mkdocs-badges
+url = https://github.com/six-two/mkdocs-crosslink-plugin
 license = MIT License
 classifiers =
     License :: OSI Approved :: MIT License
@@ -28,7 +28,7 @@ install_requires =
 
 [options.entry_points]
 mkdocs.plugins =
-    badges = mkdocs_badges:BadgesPlugin
+    crosslink = mkdocs_crosslink_plugin:CrosslinkPlugin
 
 [options.packages.find]
 where = src
