--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,28 +8,13 @@ theme:
 nav:
 # Hide the index page -> would otherwise result in two mkdocs-badges links
 - "": index.md
-- setup.md
-- badges.md
-- styling.md
-- migration.md
-- Tests:
-  - test/basic.md
-  - test/install.md
-  - test/invalid.md
-  - test/tags.md
 
 plugins:
 - search
-- badges:
-    tag_page_link: /test/tags/
-- tags:
-    tags_file: test/tags.md
+- crosslink
 
 # SEE https://squidfunk.github.io/mkdocs-material/reference/admonitions/
 markdown_extensions:
   - admonition
   - pymdownx.details
   - pymdownx.superfences
-
-extra_css:
-- assets/stylesheets/custom.css
