--- a/mypy.ini
+++ b/mypy.ini
@@ -1,5 +1,5 @@
 [mypy]
-files = src/mkdocs_badges/**/*.py
+files = src/mkdocs_crosslink_plugin/**/*.py
 
 [mypy-mkdocs.*]
 ignore_missing_imports = True
