Safety commit - broken state

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = mkdocs-crosslink-plugin
 version = 0.0.1
 author = six-two
 author_email = pip@six-two.dev
-description = Simplify linking between different MkDocs pages
+description = Simplify linking between different MkDocs sites
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/six-two/mkdocs-crosslink-plugin
