Updated dependencies and build script

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,7 @@
 {
+    "installCommand": "echo Nothing to do",
+    "buildCommand": "bash -x build.sh",
+    "outputDirectory": "public",
     "github": {
         "silent": true
     }
